src/styles/interactive-video.css
/* ... */
.h5p-interactive-video .h5p-interaction {
  position: absolute;
  width: 1.75em;
  height: 1.75em;
  z-index: 2;
  outline: none;
}

.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible,
.h5p-interactive-video .h5p-interaction.h5p-link-interaction a:focus-visible {
  outline: 2px solid #179fff;
}

.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible{
  outline-offset: 8px;
}

/* Touch area bigger than actual button */
.h5p-interactive-video .h5p-interaction .h5p-touch-area {
  width: 2.5em;
  height: 2.5em;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
  cursor: pointer;
}

.h5p-interactive-video .h5p-interaction-label {
  transition: transform 0.2s;
}

.h5p-interactive-video .h5p-interaction-label {
  position: absolute;
  top: 0;
  left: 0.875em;
  height: 100%;
  line-height: 1.75em;
  padding: 0 0.875em 0 1.375em;
  background: rgba(0, 0, 0, 0.8);
  border-top-right-radius: 1em;
  border-bottom-right-radius: 1em;
  color: #fff;
  z-index: 1;
  width: auto;
  white-space: nowrap;
  cursor: pointer;
  vertical-align: text-bottom;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#cc000000,endColorstr=#cc000000);
}
/* Text in labels should have smaller margins: */
.h5p-interactive-video .h5p-interaction-label .h5p-interaction-label-text {
  display: block;
  color: #fff;
  font-size: 0.7em;
  margin: 0;
}

.h5p-interactive-video .h5p-interaction-label .h5p-interaction-label-text > p {
  font-size: 1em;
  margin: 0;
  line-height: inherit;
}

.h5p-interactive-video .h5p-interaction-label.h5p-left-label {
  left: auto;
  right: 0.875em;
  padding: 0 1.375em 0 0.875em;
  border-top-left-radius: 1em;
  border-bottom-left-radius: 1em;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.h5p-interactive-video .h5p-interaction-label.h5p-interaction-label-standalone  {
  left: 0;
  padding: 0.2em 0.5em;
  line-height: 1.5;
  height: auto;
  min-width: 1.5em;
  border-radius: 0;
  cursor: auto;
}

.h5p-interactive-video .h5p-interaction-label.h5p-interaction-label-standalone:focus-visible {
  outline: 1px solid #0099ff;
  outline-offset: 0;
}

.h5p-interactive-video .h5p-interaction-button {
  cursor: pointer;
  position: relative;
  z-index: 2;
  display: block;
  width: 1.75em;
  height: 1.75em;
  background-clip: padding-box;
  border-radius: 50%;
  line-height: 1.75em;
  color: #fff;
  box-shadow: 0 0.15em 0.25em 0 rgba(0, 0, 0, 0.5);
  text-align: center;
  border-color: transparent;
  transition: transform 0.2s, background 0.3s, box-shadow 0.3s, border-color 0.3s;
}
.h5p-interactive-video .h5p-interaction:hover .h5p-interaction-button {
  box-shadow: 0 0.3em 0.25em 0 rgba(0, 0, 0, 0.5);
}
.h5p-interactive-video .h5p-hidden > .h5p-interaction-button {
  transform: rotate(90deg) scale(0,0);
}
.h5p-interactive-video .h5p-hidden > .h5p-interaction-label {
  transform: scale(0,0) translateX(-100%);
}

/* Purple interactions; default */
.h5p-interactive-video div > .h5p-interaction-button {
  background-color: #981d99;
}

.h5p-interactive-video div:hover > .h5p-interaction-button {
  background-color: #661366;
}
.h5p-interactive-video div:focus-visible > .h5p-interaction-button {
  /* Default focus effect - purple */
  top: -0.167em;
  left: -0.167em;
  border: 0.167em solid #e489f3;
}

.h5p-interactive-video div:active > .h5p-interaction-button {
  background-color: #4c0e4c;
  box-shadow: 0 0.15em 0.25em 0 rgba(0, 0, 0, 0.5);
}

.h5p-interactive-video div > .h5p-interaction-button:before {
  font-family: 'H5Picons';
  content: "\e609";
}

/* Blue interactions; text, images, etc. */
.h5p-interactive-video .h5p-text-interaction > .h5p-interaction-button,
.h5p-interactive-video .h5p-table-interaction > .h5p-interaction-button,
.h5p-interactive-video .h5p-link-interaction > .h5p-interaction-button,
.h5p-interactive-video .h5p-image-interaction > .h5p-interaction-button {
  background-color: #1d5cff;
}

.h5p-interactive-video .h5p-text-interaction:hover > .h5p-interaction-button,
.h5p-interactive-video .h5p-table-interaction:hover > .h5p-interaction-button,
.h5p-interactive-video .h5p-link-interaction:hover > .h5p-interaction-button,
.h5p-interactive-video .h5p-image-interaction:hover > .h5p-interaction-button {
  background-color: #003fdf;
}
.h5p-interactive-video .h5p-text-interaction:focus-visible > .h5p-interaction-button,
.h5p-interactive-video .h5p-table-interaction:focus-visible > .h5p-interaction-button,
.h5p-interactive-video .h5p-link-interaction:focus-visible > .h5p-interaction-button,
.h5p-interactive-video .h5p-image-interaction:focus-visible > .h5p-interaction-button {
  border-color: #70b0ff;
}
.h5p-interactive-video .h5p-text-interaction:active > .h5p-interaction-button,
.h5p-interactive-video .h5p-table-interaction:active > .h5p-interaction-button,
.h5p-interactive-video .h5p-link-interaction:active > .h5p-interaction-button,
.h5p-interactive-video .h5p-image-interaction:active > .h5p-interaction-button {
  background-color: #163c9b;
  box-shadow: 0 0.15em 0.25em 0 rgba(0, 0, 0, 0.5);
}

.h5p-interactive-video .h5p-text-interaction > .h5p-interaction-button:before,
.h5p-interactive-video .h5p-table-interaction > .h5p-interaction-button:before,
.h5p-interactive-video .h5p-link-interaction > .h5p-interaction-button:before,
.h5p-interactive-video .h5p-image-interaction > .h5p-interaction-button:before {
  font-family: 'H5PFontAwesome4';
  content: "\f055";
}

/* Timecode links are green  */
.h5p-interactive-video .h5p-goto-timecode > .h5p-interaction-button {
  background-color: var(--h5p-theme-main-cta-base);
}
.h5p-interactive-video .h5p-goto-timecode:hover > .h5p-interaction-button {
  background-color: #007b71;
}
.h5p-interactive-video .h5p-goto-timecode:focus-visible > .h5p-interaction-button {
  border-color: #53d5c9;
}
.h5p-interactive-video .h5p-goto-timecode:active > .h5p-interaction-button {
  background-color: #055e57;
}
/* ... */

